<resources>
    <string name="app_name">GroupCommunication</string>
    <string name="input_group">Группа:</string>
    <string name="example_group">ИНБО–15–20</string>
    <string name="input_password">Пароль группы:</string>
    <string name="example_password">examplepass</string>
    <string name="enter">Войти</string>
    <string name="title_communication">Чат</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_settings">Настройки</string>
    <string name="create_group_hint">Хочешь создать свою группу?\nПиши в ВК: @LuckyStar</string>
    <string name="refresh">Обновить</string>
    <string name="successful_refreshed">Успешно обновлено!</string>
    <string name="problem_with_getting_local_schedule">Не удалось получить локальное расписание!</string>
    <string name="wait_for_refreshing">Происходит обновление… Ожидайте…</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
</resources>