<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_communication">

    <fragment
        android:id="@+id/navigation_communication"
        android:name="ru.tidinari.groupcommunication.view.communication.CommunicationFragment"
        android:label="@string/title_communication"
        tools:layout="@layout/fragment_communication" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="ru.tidinari.groupcommunication.view.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.tidinari.groupcommunication.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>